--- a/bamboopaddy_forest_detection.ipynb
+++ b/bamboopaddy_forest_detection.ipynb
@@ -51,6 +51,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bx-oX2te7oBL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "4be1b413-8d38-4e03-bf81-0ee6f2a9b1ac"
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "tGAeIgbCHHOy",
