--- a/bamboopaddy_forest_detection.ipynb
+++ b/bamboopaddy_forest_detection.ipynb
@@ -9390,90 +9390,114 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1yLk5TobMjtf",
+        "id": "AKrNio_Yq755",
         "colab_type": "code",
-        "outputId": "e379d645-f857-4d57-c399-46f42da32ecd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "height": 51
+        },
+        "outputId": "14e1b066-7820-49d0-d023-883133e6bcaf"
       },
       "source": [
-        "(zoomed>1).sum()"
+        "#Menampilkan nilai level zoomed dalam range acak\n",
+        "print(\"Minimal level zoomed :\", np.min(zoomed))\n",
+        "print(\"Maximal level zoomed :\", np.max(zoomed))"
       ],
-      "execution_count": 17,
+      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "94706"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
+          "output_type": "stream",
+          "text": [
+            "Minimal level zoomed : -0.2631117\n",
+            "Maximal level zoomed : 1.2467129\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u_9zwVJ3Netk",
+        "id": "9Z-F4y2HncQw",
         "colab_type": "code",
-        "outputId": "91fb1d4b-d2f0-4b5c-fb0c-f26b939e4252",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+          "height": 51
+        },
+        "outputId": "336ed1a9-e46b-4f55-8bd7-1776762ba487"
       },
       "source": [
-        "np.amax(zoomed)"
+        "#Menampilkan nilai level zoomed dalam range 0 sampai 1\n",
+        "normalized = (zoomed-np.min(zoomed))/(np.max(zoomed)-np.min(zoomed))\n",
+        "print(\"Minimal level ternomalisasi:\", np.min(normalized))\n",
+        "print(\"Maximal level ternomalisasi:\", np.max(normalized))"
       ],
-      "execution_count": 18,
+      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1.2467129"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 18
+          "output_type": "stream",
+          "text": [
+            "Minimal level ternomalisasi: 0.0\n",
+            "Maximal level ternomalisasi: 1.0\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7Lmw2KclO4bN",
+        "id": "Y1JPeQNjsMpy",
         "colab_type": "code",
-        "outputId": "6ed9ee7a-18ee-4df9-9af4-ef59f51c4896",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "ee2cb039-ea70-449d-abca-3477542ab4d6"
       },
       "source": [
-        "np.amin(zoomed)"
+        "#Menghitung luas lahan sawah dalam piksel\n",
+        "luaspiksel=(normalized>0.8).sum()\n",
+        "print(\"Luas lahan sawah dalam piksel :\", (luaspiksel))"
       ],
-      "execution_count": 19,
+      "execution_count": 48,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "-0.2631117"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 19
+          "output_type": "stream",
+          "text": [
+            "Luas lahan sawah dalam piksel : 220974\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "E5cIZdEVtOC9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "629b48f1-46a2-4e29-c133-080b2bca6a36"
+      },
+      "source": [
+        "q=(normalized>0.8).sum()\n",
+        "luasmtr = 0.3*(q)\n",
+        "luasha = (luasmtr)/1000\n",
+        "print(\"Luas lahan sawah dalam meter persegi :\", (luasmtr))\n",
+        "print(\"Luas lahan sawah dalam hektar :\", (luasha))"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Luas lahan sawah dalam meter persegi : 66292.2\n",
+            "Luas lahan sawah dalam hektar : 66.2922\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
