--- a/Identifikasi_Lahan_Pertanian_Mobile_Net.ipynb
+++ b/Identifikasi_Lahan_Pertanian_Mobile_Net.ipynb
@@ -7,7 +7,8 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Gio1709/paddy/blob/master/Identifikasi_Lahan_Pertanian_Mobile_Net.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -104,7 +115,7 @@
         "from skimage.io import imread, imsave\n",
         "from sklearn.utils.class_weight import compute_class_weight\n"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +229,7 @@
         "#gambar dengan nama awalan dengan \"b\" adalah gambar yang terdapat padi\"\n",
         "#gambar dengan nama awalan dengan \"o\" adalah gambar yang tidak terdapat padi\""
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,7 +296,7 @@
         "plt.imshow(imread(\"data/paddy/train/o10.jpg\"))\n",
         "plt.show()\n"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -367,7 +378,7 @@
         "    file = os.path.join(\"data/paddy/train/\",file)\n",
         "    save_to_folder(file,save_directory)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1341,7 +1352,7 @@
         "y = np.array(y)\n",
         "print(x.shape,y.shape)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,7 +1384,7 @@
         "print(valid_x.shape)\n",
         "print(valid_y.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,7 +1417,7 @@
         "cw = compute_class_weight(\"balanced\",np.unique(train_y),train_y)\n",
         "print(cw)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,11 +1470,11 @@
       "metadata": {
         "id": "SnirigVPD4DG",
         "colab_type": "code",
+        "outputId": "36d1a914-7d23-443d-8fa6-30d46a7f4593",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
-        },
-        "outputId": "36d1a914-7d23-443d-8fa6-30d46a7f4593"
+        }
       },
       "source": [
         "IMG_SHAPE = (224, 224, 3)\n",
@@ -1472,7 +1483,7 @@
         "                                              include_top=False, \n",
         "                                              weights='imagenet')"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1502,7 +1513,7 @@
         "base_model.trainable = True\n",
         "base_model.summary()"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1736,7 +1747,7 @@
         "model.compile(\"adam\",loss=\"sparse_categorical_crossentropy\",metrics=[\"acc\"])\n",
         "model.summary()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1791,7 +1802,7 @@
         "\n",
         "history = model.fit(train_x,train_y,batch_size=128,epochs=100,validation_data=(valid_x,valid_y),class_weight=cw, callbacks = [ckpt])"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2217,11 +2228,11 @@
       "metadata": {
         "id": "m7TENQLTDbhl",
         "colab_type": "code",
+        "outputId": "89e8ce5b-d51f-45e3-c2b8-69e517f75654",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
-        },
-        "outputId": "89e8ce5b-d51f-45e3-c2b8-69e517f75654"
+        }
       },
       "source": [
         "plt.plot(history.history[\"acc\"],label=\"Akurasi Pelatihan\")\n",
@@ -2234,7 +2245,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2292,11 +2303,11 @@
       "metadata": {
         "id": "JryLAxuU2DqR",
         "colab_type": "code",
+        "outputId": "d3865904-b618-4fa1-9ca0-cbfa43055165",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "d3865904-b618-4fa1-9ca0-cbfa43055165"
+        }
       },
       "source": [
         "#Memeriksa matriks model\n",
@@ -2306,7 +2317,7 @@
         "#Evaluasi validasi data\n",
         "print(model.evaluate(x= valid_x, y = valid_y))"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -2327,11 +2338,11 @@
         "id": "Vf9HhjGyT8hf",
         "colab_type": "code",
         "cellView": "both",
+        "outputId": "833473b6-df1c-4a8c-c30f-963368b9572f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 275
-        },
-        "outputId": "833473b6-df1c-4a8c-c30f-963368b9572f"
+        }
       },
       "source": [
         "#Membaca Gambar Test Data dan Menampilkannya\n",
@@ -2386,7 +2397,7 @@
         "\n",
         "print(n_total,n_x,n_total//n_x)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2415,11 +2426,11 @@
       "metadata": {
         "id": "yxTmyErrlV_z",
         "colab_type": "code",
+        "outputId": "fdfcb296-1652-4be8-fd2c-83675b622fc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 281
-        },
-        "outputId": "fdfcb296-1652-4be8-fd2c-83675b622fc3"
+        }
       },
       "source": [
         "plt.subplots_adjust(wspace=0.2, hspace=0.8)\n",
@@ -2439,7 +2450,7 @@
         "    plt.title(label)\n",
         "    plt.imshow(X_test[idx])"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2471,11 +2482,11 @@
       "metadata": {
         "id": "f-RiaDEEUWQm",
         "colab_type": "code",
+        "outputId": "9485dd2b-09bb-474d-de4b-d524320ee414",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "9485dd2b-09bb-474d-de4b-d524320ee414"
+        }
       },
       "source": [
         "#Memprediksi prpbalititas keberadaaan lahan sawah padi terhadap gambar yang telah dicacah \n",
@@ -2489,7 +2500,7 @@
         "paddy = np.flip(paddy,axis=0)\n",
         "plt.imshow(paddy,cmap=\"jet\")"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
